--- a/angular-client/src/app/stock.component.css
+++ b/angular-client/src/app/stock.component.css
@@ -1,3 +1,5 @@
 div.table { display: table; }
 div.row { display: table-row; }
 div.cell { display: table-cell; }
+div.small { font-size: small; }
+div.code { font-family: monospace; font-size: large; }
