--- a/angular-client/src/app/stock.component.html
+++ b/angular-client/src/app/stock.component.html
@@ -1,9 +1,9 @@
 <div class="table">
   <div class="row">
-    <div class="cell code" [innerHTML]="formatMoney(high)"></div><div class="cell"><sup>High</sup></div><div class="cell code" [innerHTML]="formatMoney(open * 1.03)"></div><div class="cell" style="text-align: right;">{{ symbol }} {{ quantity }}</div>
+    <div class="cell code" [innerHTML]="formatMoney(high)"></div><div class="cell"><sup>High</sup></div><div class="cell code" [innerHTML]="formatMoney(open * 1.03)"></div><div class="cell" style="text-align: right;"><span style="font-size: larger;">{{ symbol }}</span> {{ quantity }}</div>
   </div>
   <div class="row">
     <div class="cell code" [innerHTML]="formatMoney(low)"></div> <div class="cell"><sub>Low</sub></div><div class="cell code" [innerHTML]="formatMoney(open * 0.97)"></div><div class="cell code" [innerHTML]="'&nbsp;&nbsp;&nbsp;' + formatMoney(lastTradePrice)"></div>
   </div>
 </div>
-<button (click)="test()">Test</button>
+
