--- a/angular-client/src/app/stock.component.css
+++ b/angular-client/src/app/stock.component.css
@@ -7,3 +7,5 @@ div.code { font-family: monospace; font-size: large; }
 div.row.buy { color: hsl(0, 50%, 40%); }
 div.row.sell { color: hsl(240, 50%, 40%); }
 div.row.buy.confirmed, div.row.sell.confirmed { color: #444; }
+div.row.buy.matched { color: hsl(0, 50%, 82%); }
+div.row.sell.matched { color: hsl(240, 50%, 82%); }
