--- a/angular-client/src/app/stock.component.html
+++ b/angular-client/src/app/stock.component.html
@@ -6,12 +6,24 @@
     <div class="cell code" [innerHTML]="formatMoney(low)"></div> <div class="cell"><sub>Low</sub></div><div class="cell code" [innerHTML]="formatMoney(open * 0.97)"></div><div class="cell code" [innerHTML]="'&nbsp;&nbsp;&nbsp;' + formatMoney(lastTradePrice)"></div>
   </div>
 </div>
-<div class="table" style="font-family: monospace; font-size: larger; margin-top: 1em;">
+<form class="buy-sell">
+  <mat-form-field style="width: 4em;">
+    <input matInput placeholder="Shares" name="quantity" [(ngModel)]="buysell.quantity">
+  </mat-form-field>
+  &nbsp;
+  <mat-form-field style="width: 5em !important;">
+    <input matInput placeholder="Price" name="price" [(ngModel)]="buysell.price">
+  </mat-form-field>
+  &nbsp;
+  <button mat-button="" (click)="buySell()">Buy / Sell</button>
+</form>
+<div class="table" style="font-family: monospace; font-size: larger;">
   <div *ngFor="let order of orders; trackBy: trackByFunction" [class]="calculateClasses(order)">
     <div class="cell" [title]="order.matchId">{{ minifyTimestamp(order.createdAt) }}</div>
     <div class="cell" [title]="order.createdAt" style="text-align: right;">{{ order.quantity }}</div>
     <div class="cell" [title]="order.id" style="font-size: small;">&#8903;</div>
     <div class="cell">{{ order.averagePrice ? order.averagePrice : order.price }}</div>
+    <div class="cell"><span class="cancel" *ngIf="order.state == 'confirmed'" (click)="cancelOrder(order.id)">&#10008;</span></div>
   </div>
 </div>
 
