--- a/angular-client/src/app/configuration.component.css
+++ b/angular-client/src/app/configuration.component.css
@@ -1,6 +1,6 @@
 div.handle {
   border-radius: 0 .4em .4em 0; background-color: #24e; color: #fff; line-height: 1; cursor: pointer;
-  padding: .2em .5em; display: table-cell;
+  padding: .2em .5em; display: table-cell; vertical-align: middle;
 }
 
 div.c { padding: .5em; background-color: #fff; }
