--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,4 +1,14 @@
 <div class="configuration" style="display: table;"></div>
+<button (click)="newNotice()">Click</button>
 <ol>
   <li class="stock-panel" *ngFor="let symbol of symbols; trackBy: trackByFunction" [_symbol]="symbol"></li>
 </ol>
+
+<div class="notice-container">
+<!--
+  <div class="notice" *ngFor="let n of notices; trackBy: trackByNoticeFunction"
+       [uuid]="n.uuid"></div>
+-->
+  <div class="notice" *ngFor="let n of notices; trackBy: trackByNoticeFunction"
+       [uuid]="n.uuid" [message]="n.message" [level]="n.level"></div>
+</div>
