--- a/angular-client/src/app/app.component.css
+++ b/angular-client/src/app/app.component.css
@@ -9,9 +9,16 @@ ol > li.stock-panel {
   background-color: #fff;
 }
 
-div.notice-container { z-index: 99; position: fixed; top: .2em; right: 1em; text-align: right; }
+div.notice-container { z-index: 99; position: fixed; top: 0; right: .5em; text-align: right; }
 div.notice {
-  margin-top: .8em; border-radius: .25em; border: 1px solid #b8daff;
-  background: linear-gradient(#cce5ff, #e2f0ff, #cce5ff);
-  color: #004085; padding: .4em; box-shadow: -.4em .3em .4em #ccc;
+  margin-top: .8em; border-radius: .25em; border: 1px solid; padding: .4em; box-shadow: -.4em .4em .4em #ccc;
+}
+div.notice.primary {
+  border-color: #b8daff; background: linear-gradient(#cce5ff, #e2f0ff, #cce5ff); color: #004085;
+}
+div.notice.danger {
+  border-color: #f5c6cb; background: linear-gradient(#f8d7da, #fcf2f3, #f8d7da); color: #721c24;
+}
+div.notice.light {
+  border-color: #fdfdfe; background: linear-gradient(#fefefe, #fff, #fefefe); color: #818182;
 }
