robinhood stuff google calendar api

--- a/angular-client/src/app/stock.component.html
+++ b/angular-client/src/app/stock.component.html
@@ -1,35 +1,1 @@
-<div class="table">
-  <div class="row">
-    <div class="cell code" [innerHTML]="formatMoney(high)"></div><div class="cell"><sup>High</sup></div><div class="cell code" [innerHTML]="formatMoney(open * 1.03)"></div><div class="cell" style="text-align: right;"><span style="font-size: larger;" [title]="'open: ' + open">{{ symbol }}</span> {{ quantity }}</div>
-  </div>
-  <div class="row">
-    <div class="cell code" [innerHTML]="formatMoney(low)"></div> <div class="cell"><sub>Low</sub></div> <div class="cell code" [innerHTML]="formatMoney(open * 0.97)"></div><div class="cell code" [innerHTML]="'&nbsp;&nbsp;&nbsp;' + formatMoney(lastTradePrice)"></div>
-  </div>
-</div>
-<form class="buy-sell">
-  <input name="quantity" type="number" [(ngModel)]="buysell.quantity" style="width: 3em;"
-         class="form-control">
-  &nbsp;
-  <input placeholder="Price" name="price" type="number" step="0.01" [(ngModel)]="buysell.price" style="width: 4em;"
-         class="form-control">
-  &nbsp;
-  <button (click)="buySell()" class="btn btn-primary"
-          [disabled]="buysell.quantity == null || buysell.price == null || buysell.quantity < 0 || buysell.price < 0">
-    Bu / Se
-  </button>
-  &nbsp;
-  <span class="button" (click)="toggleShowMatchedTransactions()">
-    <span *ngIf="!showMatchedTransactions">&#8610;</span>
-    <span *ngIf="showMatchedTransactions">&#8611;</span>
-  </span>
-</form>
-<div class="table" style="font-family: monospace;">
-  <div *ngFor="let order of orders; trackBy: trackByFunction" [class]="calculateClasses(order)">
-    <div class="cell" [title]="order.matchId">{{ minifyTimestamp(order.createdAt) }}</div>
-    <div class="cell" [title]="order.createdAt" style="text-align: right;">{{ order.quantity }}</div>
-    <div class="cell" [title]="order.id" style="font-size: small;">&#8903;</div>
-    <div class="cell">{{ order.averagePrice ? order.averagePrice : order.price }}</div>
-    <div class="cell"><span class="button" *ngIf="order.state != 'filled'" (click)="cancelOrder(order.id)">&#10008;</span></div>
-  </div>
-</div>
-
+{{ symbol }}
