--- a/angular-client/src/app/stock.component.css
+++ b/angular-client/src/app/stock.component.css
@@ -1,3 +1,4 @@
+.button { color: #f00; cursor: pointer; }
 td.small { font-size: .9em; }
 td.smaller { font-size: .8em; }
 td.x-small { font-size: .7em; }
