--- a/angular-client/src/app/stock.component.html
+++ b/angular-client/src/app/stock.component.html
@@ -40,7 +40,7 @@
       <td class="none">state: {{ order.state }}</td>
       <td class="none">side: {{ order.side }}</td>
       <td class="none">matchId: {{ order.matchId }}</td>
-      <td style="text-align: right;">{{ order.cumulative_quantity }}</td>
+      <td style="text-align: right;">{{ order.state.indexOf('confirm') >= 0 ? order.quantity : order.cumulative_quantity }}</td>
       <td class="x-small">&#8903;</td>
       <td>{{ order.average_price ? order.average_price.toFixed(2) : order.price.toFixed(2) }}</td>
       <td *ngIf="order.state != 'filled'">&#10008;</td>
